<resources>
    <string name="app_name">TahweshaJava</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello">Hello</string>
    <string name="john">John</string>
    <string name="your_finances_are_looking_good">Your finances are looking good</string>
    <string name="your_available_balance_is">Your available balance is</string>
    <string name="_20_983_sar">20,983 SAR</string>
    <string name="by_this_time_last_month_you_spent_slightly_higher_22_719_sar">By this time last month, you spent slightly higher (22,719 SAR)</string>
    <string name="saudi_nb">Saudi NB</string>
    <string name="_12_000_00sar">12,000.00SAR</string>
    <string name="al_rajhi_bank">Al Rajhi Bank</string>
    <string name="_950_00_sar">950.00 SAR</string>
    <string name="saudi_british_bank">Saudi British Bank</string>
    <string name="_1_050_00_sar">1,050.00 SAR</string>
    <string name="user_icon">User Icon</string>
    <string name="bell_icon">Bell Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="sort_your_transactions">Sort your transactions</string>
    <string name="ellipse_icon">ellipse_icon</string>
    <string name="get_points_for_sorting_your_ntransactions">Get points for sorting your\ntransactions</string>
    <string name="my_budgets">My Budgets</string>
    <string name="you_have">You have</string>
    <string name="_29_880_sar">29,880 SAR</string>
    <string name="left_out_of_n80_888_budgeted">Left out of N80,888 budgeted</string>
    <string name="amazed_emoji">😱</string>
    <string name="sapa_go_soon_catch_you_bros_calm_down">Sapa go soon catch you bros, calm down!!</string>
    <string name="our_partners">Our Partners</string>
    <string name="kuda_bank">Kuda bank</string>
    <string name="_12_000_00_sar">12,000.00 SAR</string>
    <string name="account">Account</string>
    <string name="add_new_account">+ Add new account</string>
    <string name="my_account">My Account</string>
    <string name="type_of_account">Type of account</string>
    <string name="savings">Savings</string>
    <string name="account_no">Account No</string>
    <string name="available_balance">Available Balance</string>
    <string name="_1234567890">1234567890</string>
    <string name="date_added">Date Added</string>
    <string name="_15_05_20_10_03_am">15/05/20, 10:03 AM</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="j">J</string>
    <string name="john_ogaga">John Ogaga</string>
    <string name="zenith_bank_12_03_am">Zenith Bank 12:03 AM</string>
    <string name="_1_983_sar">+1,983 SAR</string>
    <string name="_1_of_20">1 of 20</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="_2175836514">2175836514</string>
    <string name="sep_01_at_2_24_pm">Sep 01 at 2:24 PM</string>
    <string name="mc_loc_pos_prch_2134555666_funds_amp_electronic_t_la_lang"><![CDATA[Mc Loc Pos Prch-2134555666--Funds & Electronic T La Lang-]]></string>
    <string name="transaction_remark">Transaction Remark</string>
    <string name="does_this_category_match_the_transaction">Does this category match the transaction</string>
    <string name="telephone_icon">☎</string>
    <string name="utilities">Utilities</string>
    <string name="lawma">Lawma</string>
    <string name="power">Power</string>
    <string name="water">Water</string>
    <string name="rent">Rent</string>
    <string name="cancel">Cancel</string>
    <string name="love">Love</string>
    <string name="great_job">Great job!!</string>
    <string name="keep_swiping">Keep Swiping</string>
    <string name="this_is_an_overview_of_all_your_brees_account_so_come_back_later">This is an overview of all your Brees account, so come back later</string>
    <string name="welcome">Welcome</string>
    <string name="budget">Budget</string>
    <string name="you_have_no_budget">You have no budget</string>
    <string name="add_a_new_budget">+ Add a new budget</string>
    <string name="partners">partners</string>
    <string name="transactions">Transactions</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transactions_details">Transactions Details</string>
    <string name="transfer_to_philips">Transfer to philips</string>
    <string name="prompt">Eating out</string>
    <string name="transaction_category">transaction_category</string>
    <string name="type">Type</string>
    <string name="credit">Credit</string>
    <string name="description">Description</string>
    <string name="payment_for_coffee">Payment for Coffee</string>
    <string name="bank">Bank</string>
    <string name="guaranty_trust_bank">Guaranty Trust Bank</string>
    <string name="_42_209sar">+42,209SAR</string>
    <string name="date">Date</string>
    <string name="_10_sep_2021">10 Sep, 2021</string>
    <string name="_12_03_am">12:03 AM</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="_01_sep_2021_10_sep_2021">01 Sep 2021 - 10 Sep 2021</string>
    <string name="amount">Amount</string>
    <string name="price_range">Price Range</string>
    <string name="_10sar_250_000sar">10SAR - 250,000SAR</string>
    <string name="_10_000_000">10,000,000</string>
    <string name="cont">Continue</string>
    <string name="range_slider">range_slider</string>
    <string name="notification">Notification</string>
    <string name="cashback_50">Cashback 50%</string>
    <string name="get_50_cashback_for_pizza_hut">Get 50% cashback for Pizza Hut</string>
    <string name="claim_it_now">Claim it now</string>
    <string name="getbrees_flex_friday_deal">GetBrees Flex Friday Deal</string>
    <string name="_10_39_am">10:39 AM</string>
    <string name="tplace">TPLACE</string>
    <string name="use_tplace_promo_code">Use TPLACE Promo Code</string>
    <string name="use_promo_code_for_the_place">Use Promo Code for The’Place</string>
    <string name="promo">Promo</string>
    <string name="_3_40_pm">3:40 PM</string>
    <string name="shopping_budget_has_exceeds">Shopping budget has exceeds..</string>
    <string name="your_utilities_budget_has_exceeds">Your Utilities budget has exceeds....</string>
    <string name="last_7_days">Last 7 days</string>
</resources>