<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="48dp"
    android:layout_marginBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#105D38">

        <TextView
            android:gravity="center"
            android:id="@+id/promo"
            android:layout_width="38dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:hint="@string/tplace"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="10sp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="4dp"
        android:translationX="62dp"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:hint="@string/use_tplace_promo_code"
        android:textColorHint="#030319"
        android:textColor="#030319"/>

    <TextView
        android:id="@+id/body"
        android:translationY="24dp"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:translationX="62dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="12sp"
        android:hint="@string/use_promo_code_for_the_place"
        android:textColorHint="#8F92A1"
        android:textColor="#8F92A1"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="4dp"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/inter_medium"
        android:textSize="12sp"
        android:hint="@string/promo"
        android:textColorHint="#4CD080"
        android:textColor="#4CD080"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="24dp"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/inter_medium"
        android:textSize="12sp"
        android:hint="@string/_3_40_pm"
        android:textColorHint="#8F92A1"
        android:textColor="#8F92A1"/>

</RelativeLayout>