<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MyAccount">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <include
            android:layout_margin="5dp"
            android:id="@+id/back_button"
            layout="@layout/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions_details"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:textColor="#131313"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="335dp"
        android:layout_height="650dp"
        android:layout_centerHorizontal="true"
        android:translationY="76dp">

        <androidx.cardview.widget.CardView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="134dp"
            android:backgroundTint="#EEF2F8">

            <TextView
                android:id="@+id/name_initial"
                android:layout_width="11dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/j"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="19sp"
                android:textColorHint="#005CEE"
                android:textColor="#005CEE"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="68dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/transfer_to_philips"
            android:textColorHint="#111827"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="16sp"
            android:textColor="#111827"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/dropdown_menu"
            android:layout_width="155dp"
            android:layout_height="46dp"
            android:translationY="119dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/transaction_category"/>
            <!--android:prompt="@string/prompt"-->

        <androidx.cardview.widget.CardView
            android:layout_width="327dp"
            android:layout_height="112dp"
            android:translationY="197dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="#F9FAFB">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="24dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/credit"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColorHint="#1B7A00"
                        android:textColor="#1B7A00"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="64dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/payment_for_coffee"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColorHint="#121826"
                        android:textColor="#121826"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="327dp"
            android:layout_height="112dp"
            android:translationY="333dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="#F9FAFB">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="24dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bank"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/bank_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/guaranty_trust_bank"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColorHint="#121826"
                        android:textColor="#121826"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="64dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/_42_209sar"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_semi_bold"
                        android:textSize="14sp"
                        android:textColorHint="#1B7A00"
                        android:textColor="#1B7A00"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="327dp"
            android:layout_height="112dp"
            android:translationY="469dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="#F9FAFB">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="24dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/_10_sep_2021"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColorHint="#121826"
                        android:textColor="#121826"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="279dp"
                    android:layout_height="24dp"
                    android:translationY="64dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColor="#6C727F"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/_12_03_am"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="14sp"
                        android:textColorHint="#121826"
                        android:textColor="#121826"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>