<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F7FF"
    tools:context=".view.Account">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <include
            android:layout_margin="5dp"
            android:id="@+id/back_button"
            layout="@layout/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:textColor="#131313"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="375dp"
        android:layout_height="461dp"
        android:layout_centerHorizontal="true"
        android:translationY="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/your_available_balance_is"
            android:fontFamily="@font/inter_medium"
            android:textSize="14sp"
            android:textColor="#91919F"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="28dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/_20_983_sar"
            android:textColorHint="#161719"
            android:fontFamily="@font/inter_bold"
            android:textSize="36sp"
            android:textColor="#161719"/>

        <RelativeLayout
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:translationY="150dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/bank_item"
                tools:itemCount="4"/>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:translationY="650dp"
        android:background="@drawable/rounded_box"
        android:layout_centerHorizontal="true"
        app:backgroundTint="#006C32"
        android:gravity="center"
        android:text="@string/add_new_account"
        android:textSize="14sp"
        android:fontFamily="@font/inter_semi_bold"
        android:textColor="#FCFCFC"/>

</RelativeLayout>